[package]
name = "motd_kuuwange"
version = "0.1.0"
authors = ["shellcodesniper <shellcodesniper@icloud.com>"]
edition = "2018"

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 2

[[bin]]
name = "motd_kuuwange"
test = false
bench = false

[dependencies]
sys-info = '0.9.0'
colour = '0.6.0'
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = '0.4.19'
terminal_size = '0.1.17'