[package]
name = "pretty-motd"
version = "1.0.0"
authors = ["shellcodesniper <shellcodesniper@icloud.com>"]
description = "A Simple & Pretty MOTD wrotten in rust"
license ="MIT"
edition = "2021"
repository = "https://github.com/shellcodesniper/MOTD"
readme = "README.md"

[[bin]]
name = "pretty-motd"
test = false
bench = false

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 2

[dependencies]
sys-info = "0.9.1"
colour = "2.1.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
chrono = "0.4.38"
terminal_size = "0.4.0"
interfaces = "0"
